app/assets/stylesheets/nail_polish/base/widgets/modal.scss
.modal {
  margin: $spacing auto;
  max-width: 300px;
  position: relative;

  @include border-radius;

  background: transparent;
  > * {
    background: $light-color;
  }

  > .inner {
    padding: $spacing * 2;
  }

  .close-icon {
    background: transparent image-url('nail_polish/elements/close_icon.png') no-repeat;
    cursor: pointer;
    margin-top: $spacing;
    height: 15px;
    width: 15px;
  }

  .light-close-icon {
    background: transparent image-url('nail_polish/elements/white_close_icon.png') no-repeat;
    margin-top: $spacing;
    width: 15px;
    height: 15px;
  }

  &.l-modal {
    margin: 0 auto;
  }
}

